--- a/JSMachine/Classes/SourceDB/mineMenuData.plist
+++ b/JSMachine/Classes/SourceDB/mineMenuData.plist
@@ -24,7 +24,7 @@
 		<key>image</key>
 		<string>icon_mine_sale</string>
 		<key>controller</key>
-		<string>JSMMySaleServiceVC</string>
+		<string>JSMMySaleServiceManagerVC</string>
 	</dict>
 	<dict>
 		<key>title</key>
