--- a/JSMachine/Classes/SourceDB/mineMenuData.plist
+++ b/JSMachine/Classes/SourceDB/mineMenuData.plist
@@ -20,7 +20,7 @@
 	</dict>
 	<dict>
 		<key>title</key>
-		<string>我的售后</string>
+		<string>我的快修申请</string>
 		<key>image</key>
 		<string>icon_mine_sale</string>
 		<key>controller</key>
