--- a/JSMachine/JSMachine/Info.plist
+++ b/JSMachine/JSMachine/Info.plist
@@ -42,6 +42,16 @@
 				<string>QQ101537412</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>qq</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>tencent101537412</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
